Update Default.css : FIx Header Elements Align

--- a/src/layout/Default/Default.css
+++ b/src/layout/Default/Default.css
@@ -12,6 +12,9 @@
 }
 
 .HeaderNav{
+    height: 100%;
+    width: 100%;
+
     display: flex;
     flex-direction: row-reverse;
 }
